start re-construct cceh-dual

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,11 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "bitset": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "regex": "cpp",
+        "iostream": "cpp"
     }
 }
