--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "type": "cppdbg",
             "request": "launch",
             // "program": "${workspaceFolder}/CCEH-BUFLOG/debug/ccehex_bench",
-            "program": "${workspaceFolder}/debug/ccehex_bench",
+            "program": "${workspaceFolder}/debug/cceh_dual_bench",
             "args": [
-                "--thread=16","--benchmarks=loadtest2","--num=240000000","--ins_num=2", "--batch=10000", "--report_interval=1"
+                "--thread=1","--benchmarks=load1","--num=120000000","--bufferNum=100000"
             ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
