--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             // "program": "${workspaceFolder}/CCEH-BUFLOG/debug/ccehex_bench",
             "program": "${workspaceFolder}/debug/cceh_dual_bench",
             "args": [
-                "--thread=1","--benchmarks=load","--num=120000000","--bufferNum=1000000"
+                "--thread=16","--benchmarks=ccehdual","--num=120000000","--ins_num=2","--batch=10000","--report_interval=1"
             ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
