--- a/CCEH/src/CMakeLists.txt
+++ b/CCEH/src/CMakeLists.txt
@@ -2,12 +2,12 @@
 set(CCEH_SRCS
     # "CCEH_BUF.cpp"
     # "CCEH_BUF.h"
-    #"CCEH_buflog.cpp"
-    #"CCEH_buflog.h"
-    "CCEH_BUF_Exchange.cpp"
-    "CCEH_BUF_Exchange.h"
-    # "CCEH_BUF_dual.cpp"
-    # "CCEH_BUF_dual.h"
+    # "CCEH_buflog.cpp"
+    # "CCEH_buflog.h"
+    # "CCEH_BUF_Exchange.cpp"
+    # "CCEH_BUF_Exchange.h"
+    "CCEH_BUF_dual.cpp"
+    "CCEH_BUF_dual.h"
     "trace.cc"
     "trace.h"
 )
