--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
-# db_exe(cceh_bench)
-db_exe(ccehex_bench)
+db_exe(cceh_bench)
+# db_exe(ccehex_bench)
 # db_exe(cceh_dual_bench)
 # db_exe(cceh_rec_bench)
 # db_exe(cceh_recovery_bench)
