--- a/CCEH/src/CMakeLists.txt
+++ b/CCEH/src/CMakeLists.txt
@@ -1,19 +1,15 @@
 # CMAKELISTS.TXT UNDER cceh
 set(CCEH_SRCS
-    # "CCEH_BUF.cpp"
-    # "CCEH_BUF.h"
     "CCEH_buflog.cpp"
     "CCEH_buflog.h"
     "CCEH_buflog_limit.cpp"
     "CCEH_buflog_limit.h"
-    # "CCEH_BUF_Exchange.cpp"
-    # "CCEH_BUF_Exchange.h"
-    # "CCEH_BUF_dual.cpp"
-    # "CCEH_BUF_dual.h"
-    # "CCEH_buflog_rec.cpp"
-    # "CCEH_buflog_rec.h"
-    # "CCEH_buflog_recovery.cpp"
-    # "CCEH_buflog_recovery.h"
+    "CCEH_BUF_Exchange.cpp"
+    "CCEH_BUF_Exchange.h"
+    "CCEH_BUF_dual.cpp"
+    "CCEH_BUF_dual.h"
+    "CCEH_buflog_recovery.cpp"
+    "CCEH_buflog_recovery.h"
     "trace.cc"
     "trace.h"
 )
