--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,73 +1,60 @@
 {
     "files.associations": {
-        "fstream": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "bitset": "cpp",
         "cctype": "cpp",
+        "chrono": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "condition_variable": "cpp",
         "cstdarg": "cpp",
         "cstddef": "cpp",
+        "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "cstring": "cpp",
         "ctime": "cpp",
         "cwchar": "cpp",
-        "array": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "*.tcc": "cpp",
-        "chrono": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "condition_variable": "cpp",
-        "cstdint": "cpp",
         "cwctype": "cpp",
         "deque": "cpp",
+        "map": "cpp",
         "unordered_map": "cpp",
+        "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
-        "algorithm": "cpp",
+        "fstream": "cpp",
         "functional": "cpp",
-        "iterator": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
-        "ratio": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
         "initializer_list": "cpp",
         "iosfwd": "cpp",
+        "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
+        "memory": "cpp",
         "mutex": "cpp",
         "new": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
         "ostream": "cpp",
         "ranges": "cpp",
-        "shared_mutex": "cpp",
+        "ratio": "cpp",
+        "regex": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
         "stop_token": "cpp",
         "streambuf": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "system_error": "cpp",
         "thread": "cpp",
-        "cinttypes": "cpp",
+        "type_traits": "cpp",
+        "tuple": "cpp",
+        "typeindex": "cpp",
         "typeinfo": "cpp",
-        "bitset": "cpp",
-        "map": "cpp",
-        "set": "cpp",
-        "regex": "cpp",
-        "iostream": "cpp",
-        "hash_map": "cpp",
-        "hash_set": "cpp",
-        "list": "cpp",
-        "unordered_set": "cpp",
-        "forward_list": "cpp",
-        "variant": "cpp",
-        "iomanip": "cpp",
-        "typeindex": "cpp"
+        "utility": "cpp"
     }
 }
