--- a/CCEH/src/CMakeLists.txt
+++ b/CCEH/src/CMakeLists.txt
@@ -4,10 +4,12 @@ set(CCEH_SRCS
     "CCEH_buflog.h"
     "CCEH_buflog_limit.cpp"
     "CCEH_buflog_limit.h"
+    "CCEH_buflog_limit_wal.cpp"
+    "CCEH_buflog_limit_wal.h"
     "CCEH_BUF_Exchange.cpp"
     "CCEH_BUF_Exchange.h"
-    "CCEH_BUF_dual.cpp"
-    "CCEH_BUF_dual.h"
+    "CCEH_buflog_dual.cpp"
+    "CCEH_buflog_dual.h"
     "CCEH_buflog_recovery.cpp"
     "CCEH_buflog_recovery.h"
     "CCEH_buflog_wal.cpp"
