cceh dual mixed

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,9 @@
-# db_exe(cceh_bench)
+db_exe(cceh_bench)
 # db_exe(cceh_limit_bench)
 # db_exe(cceh_limit_wal_bench)
 # db_exe(cceh_exchange_bench)
 db_exe(cceh_dual_bench)
-# db_exe(cceh_recovery_bench)
-# db_exe(cceh_wal_bench)
+db_exe(cceh_recovery_bench)
+db_exe(cceh_wal_bench)
 
 # db_test(buflog_test)
