--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/debug/cceh_dual_bench",
             "args": [
-                "--thread=1", "--benchmarks=load", "--num=60000000", "--report_interval=0.5", "--batch=1000000", "--ins_num=1", "--bufferNum=70000", "--bufferNum0=70000", "--bufferNum1=70000", "--gChoice=0"
+                "--thread=16", "--benchmarks=ccehdual2_mixed", "--num=120000000", "--report_interval=0.5", "--batch=10000", "--ins_num=2", "--bufferNum=70000", "--bufferNum0=70000", "--bufferNum1=70000", "--gChoice=0" ,"--initsize=256"
             ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
